# kicc100t_ros_driver

./: .gitignore  CMakeLists.txt  README.md  calculation.xlsx  kobuki_log.txt  makefile
cmake/: .gitignore  CMakeLists.txt.extra  CMakeLists.txt.templet  CMakeLists_env.txt  CMakeLists_src.txt  CMakeLists_utest.txt
install/: run.sh  stop.sh
lib/arm/: libpopt.la  libpopt.so.0.0.0  libsocketcan.so.2
lib/arm/pkgconfig/: libsocketcan.pc  popt.pc
lib/x86_32/: libencrypt.so.1  libpopt.la  libpopt.so.0
lib/x86_64/: libpopt.la  libpopt.so.0  libsocketcan.la  libsocketcan.so.2.2.1
lib/x86_64/pkgconfig/: popt.pc
src/kmr_driver/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  firmware_changelog.md  package.xml
src/kmr_driver/doxygen/: mainpage.dox
src/kmr_driver/doxygen/english/: en_appendix_parameters.dox  en_appendix_protocol.dox  en_appendix_version.dox  en_ftdi.dox  en_getting_started.dox  en_installation_linux.dox  en_installation_windows.dox  en_mainpage.dox  en_sigslots.dox  en_simple_example.dox
src/kmr_driver/doxygen/korean/: ko_mainpage.dox  ko_sigslots.dox  ko_simple_example.dox
src/kmr_driver/include/kmr_driver/: command.hpp  event_manager.hpp  kmr.hpp  kobuki.hpp  macros.hpp  modules.hpp  packets.hpp  parameters.hpp  version_info.hpp
src/kmr_driver/include/kmr_driver/modules/: acceleration_limiter.hpp  battery.hpp  diff_drive.hpp  digital_output.hpp  led_array.hpp  sound.hpp
src/kmr_driver/include/kmr_driver/packet_handler/: packet_finder.hpp  payload_base.hpp  payload_headers.hpp
src/kmr_driver/include/kmr_driver/packets/: cliff.hpp  controller_info.hpp  core_sensors.hpp  current.hpp  dock_ir.hpp  eeprom.hpp  firmware.hpp  gp_input.hpp  hardware.hpp  inertia.hpp  three_axis_gyro.hpp  ultrasonic.hpp  unique_device_id.hpp
src/kmr_driver/scripts/doxygen/: update_doxygen.bash
src/kmr_driver/scripts/web/firmware/: index.php  update_md5_values
src/kmr_driver/scripts/web/windows/: index.php  update_md5_values
src/kmr_driver/src/: CMakeLists.txt
src/kmr_driver/src/driver/: .command.cpp.swp  CMakeLists.txt  battery.cpp  command.cpp  core_sensors.cpp  diff_drive.cpp  event_manager.cpp  kmr.cpp  kobuki.cpp  packet_finder.cpp  version_info.cpp.in
src/kmr_driver/src/test/: CMakeLists.txt  initialisation.cpp  sigslots.cpp  simple_loop.cpp  velocity_commands.cpp
src/kmr_driver/src/tools/: CMakeLists.txt  simple_keyop.cpp  version_info.cpp
src/kobuki_driver/include/kobuki_driver/: command.hpp  kobuki.hpp  packets.hpp
src/kobuki_driver/include/kobuki_driver/packet_handler/: payload_headers.hpp
src/kobuki_driver/include/kobuki_driver/packets/: ultrasonic.cpp  ultrasonic.hpp
src/kobuki_driver/src/driver/: command.cpp  diff_drive.cpp  kobuki.cpp  packet_finder.cpp
